--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
   </head>
   <body>
     <script>
-          const fetchData = async()  => {
-              const data = await fetch("https://proactive-rebirth-production-f345.up.railway.app/register",{
-                  method: "POST",
-                  headers: {
-                      "Content-Type": "application/json"
-                  },
-                  body:JSON.stringify({
-   email:"morocostudent@gmail.com",
-      password:"mhayeb",
-      firstName:"mohamed",
-      lastName:"ettalbi"
-                  })
-              });
-              const json = await data.json();
-              console.log(json);
+      const fetchData = async () => {
+        const data = await fetch(
+          "https://proactive-rebirth-production-f345.up.railway.app/register",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              email: "morocostudent@gmail.com",
+              password: "mhayeb",
+              firstName: "mohamed",
+              lastName: "ettalbi",
+            }),
           }
-          fetchData()
+        );
+        const json = await data.json();
+        console.log(json);
+      };
+      fetchData();
     </script>
   </body>
 </html>
