--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="https://raw.githubusercontent.com/AliElkhayatte1/ecommerce_miel/e21c203b78de5f7c8a293d21818c9ac0093ee281/src/assets/nv.png?token=GHSAT0AAAAAADFU56S34A73XZCCTA6HLZTW2GQCVDA" alt="">
     <script>
       const changeColor = (color) => {
-        console.log(colo)
+        console.log(color)
       };
 
       const fetchData = async () => {
