--- a/test.html
+++ b/test.html
@@ -4,50 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .child {
+        width: 100px;
+        height: 100px;
+        background-color: lightblue;
+        position: relative;
+      }
+      .parent {
+        border-radius: 20px;
+        width: 100px;
+        height: 100px;
+        background-color: coral;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
   </head>
   <body>
+    <div class="parent">
+      <div class="child"></div>
+    </div>
     <script>
-      const fetchData = async () => {
-        const url = "https://proactive-rebirth-production-f345.up.railway.app/login";
-        console.log(localStorage.getItem("token"));
-        if (localStorage.getItem("token")) {
-          const dataMe = await fetch("https://proactive-rebirth-production-f345.up.railway.app/me", {
-            method: "GET",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            credentials: "include",
-          });
-          const respMe = await dataMe.json();
-          console.log(respMe,"any");
-          return;
-        }
-        const data = await fetch(url, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            email: "morocostudent@gmail.com",
-            password: "mhayeb",
-          }),
-          credentials: "include",
-        });
-        const json = await data.json();
-        localStorage.setItem("token", JSON.stringify(json));
-        console.log(json);
-        // await new Promise((resolve) => setTimeout(resolve, 3000));
-        // const data2 = await fetch("http://localhost:3000/forget-password/users", {
-        //   method: "DELETE",
-        //   headers: {
-        //     "Content-Type": "application/json",
-        //   },
-        //   credentials: "include",
-        // });
-        // const resp = await data2.json();
-        // console.log(resp);
-      };
-      fetchData();
+      // const fetchData = async () => {
+      //   const url = "https://proactive-rebirth-production-f345.up.railway.app/login";
+      //   console.log(localStorage.getItem("token"));
+      //   if (localStorage.getItem("token")) {
+      //     const dataMe = await fetch("https://proactive-rebirth-production-f345.up.railway.app/me", {
+      //       method: "GET",
+      //       headers: {
+      //         "Content-Type": "application/json",
+      //       },
+      //       credentials: "include",
+      //     });
+      //     const respMe = await dataMe.json();
+      //     console.log(respMe,"any");
+      //     return;
+      //   }
+      //   const data = await fetch(url, {
+      //     method: "POST",
+      //     headers: {
+      //       "Content-Type": "application/json",
+      //     },
+      //     body: JSON.stringify({
+      //       email: "morocostudent@gmail.com",
+      //       password: "mhayeb",
+      //     }),
+      //     credentials: "include",
+      //   });
+      //   const json = await data.json();
+      //   localStorage.setItem("token", JSON.stringify(json));
+      //   console.log(json);
+      //   // await new Promise((resolve) => setTimeout(resolve, 3000));
+      //   // const data2 = await fetch("http://localhost:3000/forget-password/users", {
+      //   //   method: "DELETE",
+      //   //   headers: {
+      //   //     "Content-Type": "application/json",
+      //   //   },
+      //   //   credentials: "include",
+      //   // });
+      //   // const resp = await data2.json();
+      //   // console.log(resp);
+      // };
+      // fetchData();
     </script>
   </body>
 </html>
